[package]
name = "pagerduty-xbar"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.15" , features = ["json"]}
serde = { version = "1.0.219" , features = ["derive"]}
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.1" , features = ["full"]}
