[package]
name = "pagerduty-xbar"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = {version = "4.5.35", features = ["derive", "env"]}
reqwest = { version = "0.12.15" , features = ["json"]}
serde = { version = "1.0.219" , features = ["derive"]}
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.1" , features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version="0.3.19"}
